--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-/*font-family: 'Roboto', sans-serif;*/
+*{
+	box-sizing: bor;
+}
 body{
+	margin: 0;
+	padding: 0;
 	font-family: 'Roboto', sans-serif;
-	background: #14131A;
+}
+.container{
 	max-width: 1140px;
 	margin: auto;
-
 }
+
+
+/*header nav*/
 header {
 	display: flex;
 	align-items: center;
@@ -38,6 +45,9 @@ header {
 	text-decoration: none;
 	color: rgba(255, 255, 255, 0.5);
 }
+
+
+/*Text Part*/
 .date {
 	font-size: 24px;
 	line-height: 28px;
@@ -56,4 +66,56 @@ header {
 	font-size: 16px;
 	line-height: 140%;
 	color: rgba(255, 255, 255, 0.8);
+}
+
+
+
+
+/*Button part*/
+.button-group {
+	margin-top: 70px;
+}
+
+button.button {
+	outline: 0;
+	border: 0;
+	border-radius: 10px;
+	padding: 15px 30px;
+	margin-right: 50px;
+}
+.play-logo {
+	margin-right: 10px;
+}
+.play-logo, .play-text {
+	color: #8D0019;
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 14px;
+	line-height: 16px;
+}
+.premiere-logo {
+	margin-right: 10px;
+}
+
+.premiere-link {
+	text-decoration: none;
+}
+.premiere-logo, .premiere-text {
+	display: inline-block;
+	vertical-align: middle;
+	color: white;
+	font-size: 14px;
+	line-height: 16px;
+	text-decoration: none;
+}
+/*Carnage part*/
+.carnage-big {
+	width: 600px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.blood {
+	background: url("../img/back2.png") no-repeat center center/100%, #14131A;
 }
